# graphrag

./: .dockerignore  .editorconfig  .env  .env.example  .env.otlp.example  .gitattributes  .gitignore  .gitmodules  .tool-versions  .vsts-ci.yml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING_协作者指南.md  DEVELOPING.md  DEVELOPING_开发指南.md  Directory.Build.props  Directory.Packages.props  Dockerfile  GraphRag.slnx  LICENSE  RAI_TRANSPARENCY.md  README.md  README_CN汉化.md  README_汉化.md  RELEASE.md  SECURITY.md  SUPPORT.md  UserGuide_使用说明.md  breaking-changes.md  config.json  cspell.config.yaml  dictionary.txt  dotnet-install.sh  female_video_entities_weight_count.csv  github-cli-stable.deb  global_search_with_dynamic_search.py  (+29 more)
.azdo/: azure-pipeline.yaml
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yaml
.github/: ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  general_issue.yml
.github/workflows/: ci.yml  claude.yaml  codeql-analysis.yml  codeql.yml  docker  dotnet-integration.yml  gh-pages.yml  issues-autoresolve.yml  javascript-ci.yml  python-checks.yml  python-ci.yml  python-integration-tests.yml  python-notebook-tests.yml  python-publish.yml  python-smoke-tests.yml  python-unit-tests.yml  release.yml  semver.yml  spellcheck.yml
.semversioner/: 0.1.0.json  0.2.0.json  0.2.1.json  0.2.2.json  0.3.0.json  0.3.1.json  0.3.2.json  0.3.3.json  0.3.4.json  0.3.5.json  0.3.6.json  0.4.0.json  0.4.1.json  0.5.0.json  0.9.0.json  1.0.0.json  1.0.1.json  1.1.0.json  1.1.1.json  1.1.2.json  1.2.0.json  1.2.1.json  1.2.2.json  2.0.0.json  2.1.0.json  2.2.0.json  2.2.1.json  2.3.0.json  2.4.0.json  2.5.0.json  2.6.0.json  2.7.0.json  2.7.1.json  2.7.2.json  3.0.0.json  3.0.1.json  3.0.2.json  3.0.3.json  3.0.4.json  3.0.5.json  (+7 more)
.semversioner/next-release/: 6788f527-7aea-4338-9a55-dd2fb0b31851.json  cache-factory-refactor.yaml  major-20240731113316639767.json  major-20240923234633073836.json  major-20250204190309656024.json  major-20250213175726371530.json  major-20250219010328495371.json  major-20250909002702300683.json  major-20250909010205372690.json  major-20250909205146252760.json  major-20251009203808375389.json  major-20260123143225940955.json  minor-20240403231624578021.json  minor-20240507174519263412.json  minor-20240517184310739150.json  minor-20240529185734474792.json  minor-20240529191314161734.json  minor-20240530175950106771.json  minor-20240603185714699531.json  minor-20240607161513332092.json  minor-20240619173009962585.json  minor-20240701185009046338.json  minor-20240701200021928520.json  minor-20240705201514907488.json  minor-20240710183748086411.json  minor-20240712152937651350.json  minor-20240729192605044649.json  minor-20240729193644620548.json  minor-20240801001005275591.json  minor-20240806062641863317.json  minor-20240807023736041951.json  minor-20240816080238245653.json  minor-20240819154736579383.json  minor-20240909192217829240.json  minor-20240917201609824936.json  minor-20241011205050985571.json  minor-20241018204541069382.json  (+394 more)
blog_posts/: index.html
cli/: index.html
common/: graph_db_client.py
developing/: index.html
docker/: Dockerfile  docker-compose.yml
docs/: README.md  blog_posts.md  blog_posts.zh.md  cli.md  cli.zh.md  developing.md  developing.zh.md  dotnet-port-plan.md  get_started.md  get_started.zh.md  index.md  index.zh.md  indexing-and-query.md  local_search_experiment_guide_en.md  local_search_experiment_guide_ko.md  visualization_guide.md  visualization_guide.zh.md
docsite/: .eleventy.js  .eleventyignore  .gitignore  index.md  package.json
examples/: README_CN汉化.md  integration_test_streaming_load.py  streaming_table_example.py
examples_notebooks/: .gitignore  global_search.ipynb  local_search.ipynb
exp_lightrag/: settings.yaml
female_audience/: relative_weight_female.csv  relative_weight_male.csv
func-app/: .gitignore  function_app.py  local.settings.json  requirements.txt  settings.yaml  utility.py
get_started/: index.html
graphrag/: __init__.py  __main__.py  build_docs.py  requirements.txt  test.py
graphrag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
graphrag_api/: server.py
input/: sample.txt
migration_scripts/: extract_graph_embeddings.ipynb  extract_text_embeddings.ipynb
output/: communities.parquet  community_reports.parquet  documents.parquet  entities.parquet  relationships.parquet  stats.json  text_units.parquet
plugins/: __init__.py
prompts/: community_graph.txt  community_report.txt  community_report_graph.txt  community_report_text.txt  community_text.txt  drift_reduce_prompt.txt  entity_extraction.txt  extract_graph.txt  global_search_map_system_prompt.txt  summarize_descriptions.txt
scripts/: __init__.py  copy_build_assets.py  e2e-test.sh  eval_local_experiment_simple.sh  neo4jvisualization.py  release.sh  semver-check.sh  spellcheck.sh  start-azurite-win.sh  start-azurite.sh  update_workspace_dependency_versions.py
search/: search_index.json
stylesheets/: extra.css
temp_input/: order77_timeline_document.md
test_csvs/: Lancedbai_Full_Employees_GraphRAG_With_DOB.csv
tests/: __init__.py  conftest.py  mock_provider.py
unified-search-app/: .vsts-ci.yml  Dockerfile  README.md  pyproject.toml
unified-search-app/app/: Home.py  __init__.py  app_logic.py  data_config.py  home_page.py
unified-search-app/app/knowledge_loader/: __init__.py  data_prep.py  model.py
unified-search-app/app/knowledge_loader/data_sources/: __init__.py  blob_source.py  default.py  loader.py  local_source.py  typing.py
unified-search-app/app/rag/: __init__.py  typing.py
unified-search-app/app/state/: __init__.py  query_variable.py  session_variable.py  session_variables.py
unified-search-app/app/ui/: __init__.py  full_graph.py  questions_list.py  report_details.py  report_list.py  search.py  sidebar.py
visualization_guide/: index.html
webserver/: globalsearch.py  localsearch.py  main.py  requirements.txt
(+2926 files in other folders)
