[project]
name = "unified-copilot"
version = "1.0.0"
description = ""
authors = [
    {name = "GraphRAG team"},
]
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "streamlit==1.43.0",
    "azure-search-documents~=11.4",
    "azure-storage-blob~=12.20",
    "azure-identity~=1.16",
    "graphrag==2.5.0",
    "altair~=5.3",
    "streamlit-agraph~=0.0.45",
    "st-tabs~=0.1",
    "spacy~=3.8",
]

[project.optional-dependencies]
dev = [
    "poethepoet~=0.26",
    "ipykernel~=6.29",
    "pyright~=1.1",
    "ruff~=0.8",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["images*"]

[tool.poe.tasks]
start = "streamlit run app/home_page.py"
start_prod = "streamlit run app/home_page.py --server.port=8501 --server.address=0.0.0.0"

[tool.pyright]
include = ["app"]
exclude = ["**/node_modules", "**/__pycache__"]
